--- a/package.json
+++ b/package.json
@@ -29,12 +29,13 @@
     "@fortawesome/fontawesome-free": "^5.15.3",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.1",
+    "ng-recaptcha": "^10.0.0",
     "ng2-adsense": "^10.1.0",
     "rxjs": "~6.6.0",
-    "tslib": "^2.3.1",
-    "zone.js": "~0.11.3",
     "ts-node": "^8.3.0",
-    "typescript": "~4.3.5"
+    "tslib": "^2.3.1",
+    "typescript": "~4.3.5",
+    "zone.js": "~0.11.3"
   },
   "devDependencies": {
     "@angular-devkit/architect": "0.1202.14",
