--- a/package.json
+++ b/package.json
@@ -17,37 +17,35 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.15",
-    "@angular/common": "~12.2.15",
-    "@angular/compiler": "~12.2.15",
-    "@angular/core": "~12.2.15",
-    "@angular/fire": "7.0",
-    "@angular/forms": "~12.2.15",
-    "@angular/platform-browser": "~12.2.15",
-    "@angular/platform-browser-dynamic": "~12.2.15",
-    "@angular/router": "~12.2.15",
+    "@angular/animations": "~13.3.11",
+    "@angular/common": "~13.3.11",
+    "@angular/compiler": "~13.3.11",
+    "@angular/core": "~13.3.11",
+    "@angular/fire": "7.4",
+    "@angular/forms": "~13.3.11",
+    "@angular/platform-browser": "~13.3.11",
+    "@angular/platform-browser-dynamic": "~13.3.11",
+    "@angular/router": "~13.3.11",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.1",
-    "ng-recaptcha": "^10.0.0",
-    "ng2-adsense": "^10.1.0",
-    "rxjs": "~6.6.0",
+    "rxjs": "7.5.6",
     "ts-node": "^8.3.0",
     "tslib": "^2.3.1",
-    "typescript": "~4.3.5",
+    "typescript": "~4.6.4",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "0.1202.14",
-    "@angular-devkit/build-angular": "^12.2.14",
-    "@angular-devkit/schematics": "^12.2.15",
+    "@angular-devkit/architect": "0.1303.9",
+    "@angular-devkit/build-angular": "^13.3.9",
+    "@angular-devkit/schematics": "^13.3.9",
     "@angular-eslint/builder": "12.7.0",
     "@angular-eslint/eslint-plugin": "12.7.0",
     "@angular-eslint/eslint-plugin-template": "12.7.0",
-    "@angular-eslint/schematics": "12.7.0",
+    "@angular-eslint/schematics": "^13.5.0",
     "@angular-eslint/template-parser": "12.7.0",
-    "@angular/cli": "~12.2.14",
-    "@angular/compiler-cli": "~12.2.15",
+    "@angular/cli": "~13.3.9",
+    "@angular/compiler-cli": "~13.3.11",
     "@nrwl/jest": "^13.4.1",
     "@types/jest": "^27.0.3",
     "@types/node": "^12.11.1",
