--- a/package.json
+++ b/package.json
@@ -17,56 +17,56 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~14.2.1",
-    "@angular/common": "~14.2.1",
-    "@angular/compiler": "~14.2.1",
-    "@angular/core": "~14.2.1",
+    "@angular/animations": "14.2.1",
+    "@angular/common": "14.2.1",
+    "@angular/compiler": "14.2.1",
+    "@angular/core": "14.2.1",
     "@angular/fire": "7.4",
-    "@angular/forms": "~14.2.1",
-    "@angular/platform-browser": "~14.2.1",
-    "@angular/platform-browser-dynamic": "~14.2.1",
-    "@angular/router": "~14.2.1",
-    "@fortawesome/fontawesome-free": "^5.15.3",
-    "bootstrap": "^5.1.3",
-    "firebase": "^9.6.1",
+    "@angular/forms": "14.2.1",
+    "@angular/platform-browser": "14.2.1",
+    "@angular/platform-browser-dynamic": "14.2.1",
+    "@angular/router": "14.2.1",
+    "@fortawesome/fontawesome-free": "5.15.3",
+    "bootstrap": "5.2.1",
+    "firebase": "9.9.4",
     "rxjs": "7.5.6",
-    "ts-node": "^8.3.0",
-    "tslib": "^2.3.1",
-    "typescript": "~4.6.4",
-    "zone.js": "~0.11.3"
+    "ts-node": "10.9.1",
+    "tslib": "2.4.0",
+    "typescript": "4.8.3",
+    "zone.js": "0.11.8"
   },
   "devDependencies": {
     "@angular-devkit/architect": "0.1402.2",
-    "@angular-devkit/build-angular": "^14.2.2",
-    "@angular-devkit/schematics": "^14.2.2",
-    "@angular-eslint/builder": "12.7.0",
-    "@angular-eslint/eslint-plugin": "12.7.0",
-    "@angular-eslint/eslint-plugin-template": "12.7.0",
-    "@angular-eslint/schematics": "^13.5.0",
-    "@angular-eslint/template-parser": "12.7.0",
-    "@angular/cli": "~14.2.2",
-    "@angular/compiler-cli": "~14.2.1",
-    "@nrwl/jest": "^13.4.1",
-    "@types/jest": "^27.0.3",
-    "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "4.28.2",
-    "@typescript-eslint/parser": "4.28.2",
-    "dotenv": "^16.0.1",
-    "eslint": "^7.26.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "firebase-tools": "^9.6.1",
-    "fuzzy": "^0.1.3",
-    "inquirer": "^8.2.0",
-    "inquirer-autocomplete-prompt": "^1.0.1",
-    "jest": "^27.4.5",
-    "jest-preset-angular": "^11.0.1",
-    "jest-sonar": "^0.2.12",
-    "jsonc-parser": "^3.0.0",
-    "open": "^7.0.3",
-    "prettier": "^2.5.1",
-    "protractor": "~7.0.0",
-    "sass": "^1.32.12",
-    "ts-jest": "^27.1.2"
+    "@angular-devkit/build-angular": "14.2.2",
+    "@angular-devkit/schematics": "14.2.2",
+    "@angular-eslint/builder": "14.0.4",
+    "@angular-eslint/eslint-plugin": "14.0.4",
+    "@angular-eslint/eslint-plugin-template": "14.0.4",
+    "@angular-eslint/schematics": "14.0.4",
+    "@angular-eslint/template-parser": "14.0.4",
+    "@angular/cli": "14.2.2",
+    "@angular/compiler-cli": "14.2.1",
+    "@nrwl/jest": "14.7.3",
+    "@types/jest": "^29.0.0",
+    "@types/node": "14.18.28",
+    "@typescript-eslint/eslint-plugin": "5.36.2",
+    "@typescript-eslint/parser": "5.36.2",
+    "dotenv": "16.0.2",
+    "eslint": "8.23.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "firebase-tools": "11.8.1",
+    "fuzzy": "0.1.3",
+    "inquirer": "9.1.1",
+    "inquirer-autocomplete-prompt": "2.0.0",
+    "jest": "29.0.3",
+    "jest-preset-angular": "12.2.2",
+    "jest-sonar": "0.2.12",
+    "jsonc-parser": "3.2.0",
+    "open": "8.4.0",
+    "prettier": "2.7.1",
+    "protractor": "7.0.0",
+    "sass": "1.54.9",
+    "ts-jest": "29.0.0"
   }
 }
