--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser-dynamic": "14.2.1",
     "@angular/router": "14.2.1",
     "@fortawesome/fontawesome-free": "5.15.3",
+    "babel-jest": "^29.0.3",
     "bootstrap": "5.2.1",
     "firebase": "9.9.4",
     "rxjs": "7.5.6",
@@ -46,6 +47,7 @@
     "@angular-eslint/template-parser": "14.0.4",
     "@angular/cli": "14.2.2",
     "@angular/compiler-cli": "14.2.1",
+    "@babel/preset-typescript": "^7.18.6",
     "@nrwl/jest": "14.7.3",
     "@types/jest": "^29.0.0",
     "@types/node": "14.18.28",
@@ -59,7 +61,7 @@
     "fuzzy": "0.1.3",
     "inquirer": "9.1.1",
     "inquirer-autocomplete-prompt": "2.0.0",
-    "jest": "29.0.3",
+    "jest": "29.0.0",
     "jest-preset-angular": "12.2.2",
     "jest-sonar": "0.2.12",
     "jsonc-parser": "3.2.0",
