--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - name: npm install and npm run build
-        run: |
-          npm install --force
-          npm run build:ci
+      - name: Install
+        run: npm install --force
+      - name: build
+        run: npm run build:ci
