--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-jest": "^29.0.3",
     "bootstrap": "5.2.1",
     "firebase": "9.9.4",
+    "ng-recaptcha": "10.0.0",
     "rxjs": "7.5.6",
     "ts-node": "10.9.1",
     "tslib": "2.4.0",
@@ -49,7 +50,7 @@
     "@angular/compiler-cli": "14.2.1",
     "@babel/preset-typescript": "^7.18.6",
     "@nrwl/jest": "14.7.3",
-    "@types/jest": "^29.0.0",
+    "@types/jest": "29.0.0",
     "@types/node": "14.18.28",
     "@typescript-eslint/eslint-plugin": "5.36.2",
     "@typescript-eslint/parser": "5.36.2",
