--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "@angular/platform-browser-dynamic": "14.2.1",
     "@angular/router": "14.2.1",
     "@fortawesome/fontawesome-free": "5.15.3",
-    "babel-jest": "^29.0.3",
+    "babel-jest": "^28.0.3",
     "bootstrap": "5.2.1",
     "firebase": "9.9.4",
     "ng-recaptcha": "10.0.0",
+    "ngx-device-detector": "^4.0.1",
     "rxjs": "7.5.6",
     "ts-node": "10.9.1",
     "tslib": "2.4.0",
@@ -50,7 +51,7 @@
     "@angular/compiler-cli": "14.2.1",
     "@babel/preset-typescript": "^7.18.6",
     "@nrwl/jest": "14.7.3",
-    "@types/jest": "29.0.0",
+    "@types/jest": "^27.5.2",
     "@types/node": "14.18.28",
     "@typescript-eslint/eslint-plugin": "5.36.2",
     "@typescript-eslint/parser": "5.36.2",
@@ -61,8 +62,8 @@
     "firebase-tools": "11.8.1",
     "fuzzy": "0.1.3",
     "inquirer": "9.1.1",
-    "inquirer-autocomplete-prompt": "2.0.0",
-    "jest": "29.0.0",
+    "inquirer-autocomplete-prompt": "3.0.0",
+    "jest": "28.0.0",
     "jest-preset-angular": "12.2.2",
     "jest-sonar": "0.2.12",
     "jsonc-parser": "3.2.0",
@@ -70,6 +71,6 @@
     "prettier": "2.7.1",
     "protractor": "7.0.0",
     "sass": "1.54.9",
-    "ts-jest": "29.0.0"
+    "ts-jest": "28.0.0"
   }
 }
