--- a/package.json
+++ b/package.json
@@ -27,11 +27,9 @@
     "@angular/platform-browser-dynamic": "14.2.1",
     "@angular/router": "14.2.1",
     "@fortawesome/fontawesome-free": "5.15.3",
-    "babel-jest": "^28.0.3",
     "bootstrap": "5.2.1",
     "firebase": "9.9.4",
     "ng-recaptcha": "10.0.0",
-    "ngx-device-detector": "^4.0.1",
     "rxjs": "7.5.6",
     "ts-node": "10.9.1",
     "tslib": "2.4.0",
@@ -49,12 +47,14 @@
     "@angular-eslint/template-parser": "14.0.4",
     "@angular/cli": "14.2.2",
     "@angular/compiler-cli": "14.2.1",
-    "@babel/preset-typescript": "^7.18.6",
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-typescript": "7.18.6",
     "@nrwl/jest": "14.7.3",
-    "@types/jest": "^27.5.2",
+    "@types/jest": "27.5.2",
     "@types/node": "14.18.28",
     "@typescript-eslint/eslint-plugin": "5.36.2",
     "@typescript-eslint/parser": "5.36.2",
+    "babel-jest": "28.0.3",
     "dotenv": "16.0.2",
     "eslint": "8.23.0",
     "eslint-config-prettier": "8.5.0",
