--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "clean": "rimraf ./dist",
     "config": "ts-node -O '{\"module\": \"commonjs\"}' ./src/assets/scripts/config.ts",
     "start": "ng serve -c local",
-    "build": "ng build",
+    "build": "ng build -c local",
     "build:prod": "ng build -c production",
     "test": "jest",
     "lint": "ng lint",
@@ -30,6 +30,7 @@
     "bootstrap": "5.2.1",
     "firebase": "9.9.4",
     "ng-recaptcha": "10.0.0",
+    "ng2-adsense": "^11.0.0",
     "rxjs": "7.5.6",
     "ts-node": "10.9.1",
     "tslib": "2.4.0",
