--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,51 +1,51 @@
-name: Deploy
-on:
-  push:
-    branches:
-      - master
+# name: Deploy
+# on:
+#   push:
+#     branches:
+#       - master
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [16.x]
+#     strategy:
+#       matrix:
+#         node-version: [16.x]
 
-    steps:
-      - uses: actions/checkout@v3
+#     steps:
+#       - uses: actions/checkout@v3
 
-      - name: Cache node modules
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
+#       - name: Cache node modules
+#         uses: actions/cache@v3
+#         with:
+#           path: ~/.npm
+#           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+#           restore-keys: |
+#             ${{ runner.os }}-node-
 
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: Build app
-        run: |
-          sudo npm install --location=global ts-node
-          sudo npm install --location=global typescript
-          sudo npm install
-          npm run config
-          npm run build
-        env: 
-          FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
-          FIREBASE_AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
-          FIREBASE_DB: ${{ secrets.FIREBASE_DB }}
-          FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
-          FIREBASE_BUCKET: ${{ secrets.FIREBASE_BUCKET }}
-          FIREBASE_SENDER: ${{ secrets.FIREBASE_SENDER }}
-          FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
-          FIREBASE_MEASUREMENT_ID: ${{ secrets.FIREBASE_MEASUREMENT_ID }}
-      - name: Deploy to Firebase
-        uses: w9jds/firebase-action@master
-        with:
-          args: deploy --only hosting
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+#       - name: Use Node.js ${{ matrix.node-version }}
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: ${{ matrix.node-version }}
+#       - name: Build app
+#         run: |
+#           sudo npm install --location=global ts-node
+#           sudo npm install --location=global typescript
+#           sudo npm install
+#           npm run config
+#           npm run build
+#         env: 
+#           FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
+#           FIREBASE_AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
+#           FIREBASE_DB: ${{ secrets.FIREBASE_DB }}
+#           FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
+#           FIREBASE_BUCKET: ${{ secrets.FIREBASE_BUCKET }}
+#           FIREBASE_SENDER: ${{ secrets.FIREBASE_SENDER }}
+#           FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
+#           FIREBASE_MEASUREMENT_ID: ${{ secrets.FIREBASE_MEASUREMENT_ID }}
+#       - name: Deploy to Firebase
+#         uses: w9jds/firebase-action@master
+#         with:
+#           args: deploy --only hosting
+#         env:
+#           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
