--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,9 @@
               "src/styles.scss",
               "node_modules/@fortawesome/fontawesome-free/css/all.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/scripts/smtp.js"
+            ]
           },
           "configurations": {
             "production": {
