--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "allowJs": true
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
